tests/cases/fail/if-2/source.lua
if x then
else
	call()